Bug 241837 - REGRESSION (iOS 16): System controls overlap website controls (affects SquareSpace, medium.com, and others)
Summary: REGRESSION (iOS 16): System controls overlap website controls (affects Square...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: HTML Editing (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Wenson Hsieh
URL:
Keywords: InRadar
Depends on: 240544
Blocks:
  Show dependency treegraph
 
Reported: 2022-06-21 20:51 PDT by Wenson Hsieh
Modified: 2022-06-22 15:43 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wenson Hsieh 2022-06-21 20:51:55 PDT
The callout bar no longer avoids overlapping webpage controls.
Comment 1 Radar WebKit Bug Importer 2022-06-21 20:52:10 PDT
<rdar://problem/95658478>
Comment 2 Wenson Hsieh 2022-06-21 21:41:52 PDT
Pull request: https://github.com/WebKit/WebKit/pull/1671
Comment 3 EWS 2022-06-22 15:43:47 PDT
Committed r295751 (251756@main): <https://commits.webkit.org/251756@main>

Reviewed commits have been landed. Closing PR #1671 and removing active labels.